--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ src="https://media3.giphy.com/media/v1.Y2lkPTZjMDliOTUyNW5xaThqYjFiYWlkajdtdWcyZ
 <!-- 🔊 SOUNDS -->
 
 <audio id="bgMusic" loop>
-<source src="music.mp3" type="audio/mpeg">
+<source src="music.mp3.mp3" type="audio/mpeg">
 
 <audio id="yesSound"
 src="https://www.myinstants.com/media/sounds/fahhhhhhhhhhh.mp3"></audio>
