--- a/index.html
+++ b/index.html
@@ -25,25 +25,63 @@ body {
     flex-direction:column;
     align-items:center;
     justify-content:center;
+    perspective: 1000px; /* Needed for 3D flap */
 }
 
-.envelope {
-    font-size:180px; /* Bigger envelope */
-    animation: float 2s infinite ease-in-out;
+/* Envelope container */
+.envelope-container {
+    position: relative;
+    width: 180px;
+    height: 120px;
+    cursor: pointer;
 }
 
-@keyframes float {
-    0%{transform:translateY(0)}
-    50%{transform:translateY(-20px)}
-    100%{transform:translateY(0)}
+/* Envelope body */
+.envelope-body {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    border-radius: 8px;
+    top: 40px;
+    left: 0;
+    transform-origin: top center;
+    background: linear-gradient(135deg,#ff4d6d,#ff8fa3);
+    z-index: 1;
 }
 
-#openBtn {
-    font-size:22px;
-    padding:14px 26px;
-    border:none;
-    border-radius:12px;
-    cursor:pointer;
+/* Envelope top flap */
+.envelope-flap {
+    position: absolute;
+    width: 100%;
+    height: 60px;
+    background: linear-gradient(135deg,#ff8fa3,#ff4d6d);
+    top: 0;
+    left: 0;
+    transform-origin: bottom center;
+    border-radius: 8px 8px 0 0;
+    z-index: 2;
+}
+
+/* Animation for opening flap */
+.envelope-container.open .envelope-flap {
+    animation: flapOpen 5s forwards ease-in-out;
+}
+
+@keyframes flapOpen {
+    0% { transform: rotateX(0deg); }
+    50% { transform: rotateX(-100deg); }
+    100% { transform: rotateX(-180deg); opacity:0; }
+}
+
+/* Fade out envelope container */
+.envelope-container.open {
+    animation: envelopeFade 5s forwards;
+}
+
+@keyframes envelopeFade {
+    0% { opacity:1; transform: scale(1); }
+    100% { opacity:0; transform: scale(1.5) translateY(-200px); }
 }
 
 /* ---------- MAIN PAGE ---------- */
@@ -51,7 +89,13 @@ body {
 #main {
     display:none;
     padding-top:6vh;
-    transition:filter .4s;
+    transition: opacity 2s ease;
+    opacity: 0;
+}
+
+#main.show {
+    display:block;
+    opacity: 1;
 }
 
 .blur {
@@ -122,7 +166,10 @@ button {
 
 <!-- 💌 ENVELOPE INTRO -->
 <div id="envelopeScreen">
-    <div class="envelope">💌</div>
+    <div class="envelope-container" id="envelope">
+        <div class="envelope-flap"></div>
+        <div class="envelope-body"></div>
+    </div>
     <button id="openBtn">Open Me</button>
 </div>
 
@@ -167,16 +214,19 @@ src="https://www.myinstants.com/media/sounds/hell-naw-dog-meme.mp3"></audio>
 
 <script>
 const openBtn = document.getElementById("openBtn");
+const envelopeContainer = document.getElementById("envelope");
 const env = document.getElementById("envelopeScreen");
 const main = document.getElementById("main");
 const bgMusic = document.getElementById("bgMusic");
 
 /* ---------- OPEN ENVELOPE ---------- */
 openBtn.onclick = () => {
-    env.style.display = "none";
-    main.style.display = "block";
 
-    // Play background music after user click (works on mobile too)
+    // Start envelope flap animation
+    envelopeContainer.classList.add("open");
+    openBtn.style.opacity = 0;
+
+    // Play background music
     bgMusic.volume = 0.5;
     const playPromise = bgMusic.play();
     if (playPromise !== undefined) {
@@ -184,6 +234,12 @@ openBtn.onclick = () => {
             console.log("Autoplay prevented. Will try again on user interaction.");
         });
     }
+
+    // After 5 seconds, hide envelope and show main page
+    setTimeout(() => {
+        env.style.display = "none";
+        main.classList.add("show");
+    }, 5000);
 };
 
 /* ---------- NO BUTTON RUN ---------- */
