--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ be my Valentine, Anya, best decision you’ll ever have had.
 </div>
 
 <img width="240" style="border-radius:12px"
-src="valentine.gif" alt="Valentine GIF">
+src="valentine.GIF" alt="Valentine GIF">
 
 <div>
 <button id="yesBtn">YES 💘</button>
